fix:interview相关文章分类

--- a/source/_posts/2022/11/前端面试相关.md
+++ b/source/_posts/2022/11/前端面试相关.md
@@ -2,8 +2,8 @@
 title: 前端面试相关
 date: 2022-11-18 10:14:02
 id: 1105
-tags: '面试相关'
-categories: '面试相关'
+tags: 'Interview'
+categories: 'Interview'
 ---
 
 #### eval
